# qrvmone

./: .bumpversion.cfg  .clang-tidy  .gitmodules  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  circle.yml  codealike.json  codecov.yml
cmake/: LibraryTools.cmake
cmake/Hunter/: config.cmake  init.cmake
cmake/cable/defaults/: HunterCacheServers.cmake
docs/: efficient_gas_calculation_algorithm.md
include/zvmone/: zvmone.h
lib/: CMakeLists.txt
lib/qrvmone/: CMakeLists.txt  advanced_analysis.cpp  advanced_analysis.hpp  advanced_execution.cpp  advanced_execution.hpp  advanced_instructions.cpp  baseline.cpp  baseline.hpp  baseline_instruction_table.cpp  baseline_instruction_table.hpp  cpu_check.cpp  execution_state.hpp  instructions.hpp  instructions_calls.cpp  instructions_opcodes.hpp  instructions_storage.cpp  instructions_traits.hpp  instructions_xmacro.hpp  opcodes_helpers.h  tracing.cpp  tracing.hpp  vm.cpp  vm.hpp
test/: CMakeLists.txt
test/bench/: CMakeLists.txt  bench.cpp  helpers.hpp  synthetic_benchmarks.cpp  synthetic_benchmarks.hpp
test/fuzzer/: CMakeLists.txt  README.md  fuzzer.cpp
test/integration/: CMakeLists.txt
test/integration/statetest/: CMakeLists.txt
test/integration/statetest/tests1/SuiteA/: test1.json
test/internal_benchmarks/: CMakeLists.txt  find_jumpdest_bench.cpp  memory_allocation.cpp  realloc_behavior.cpp
test/qrvm-benchmarks/: Makefile  README.md  circle.yml  qrvmbench.py  qrvmbench_test.py
test/qrvm-benchmarks/benchmarks/main/: blake2b_shifts.json  snailtracer.json
test/qrvm-benchmarks/benchmarks/micro/: JUMPDEST_n0.json  jump_around.json  memory_grow_mstore.json
test/qrvm-benchmarks/src/main/: sha1_shifts.yml  snailtracer.yml  structarray_alloc.yml  weierstrudel.yml
test/qrvm-benchmarks/src/micro/: JUMPDEST_n0.yml  jump_around.yml  loop_with_many_jumpdests.yml  memory_grow_mload.yml  memory_grow_mstore.yml  signextend.yml
test/state/: CMakeLists.txt  account.hpp  bloom_filter.cpp  bloom_filter.hpp  errors.hpp  hash_utils.cpp  hash_utils.hpp  host.cpp  host.hpp  mpt.cpp  mpt.hpp  mpt_hash.cpp  mpt_hash.hpp  precompiles.cpp  precompiles.hpp  precompiles_cache.cpp  precompiles_cache.hpp  rlp.hpp  state.cpp  state.hpp
test/statetest/: CMakeLists.txt  statetest.cpp  statetest.hpp  statetest_loader.cpp  statetest_logs_hash.cpp  statetest_runner.cpp
test/t8n/: CMakeLists.txt  t8n.cpp
test/unittests/: CMakeLists.txt  analysis_test.cpp  bytecode_test.cpp  execution_state_test.cpp  instructions_test.cpp  main.cpp  qrvm_benchmark_test.cpp  qrvm_calls_test.cpp  qrvm_control_flow_test.cpp  qrvm_eip2929_test.cpp  qrvm_eip3198_basefee_test.cpp  qrvm_eip3855_push0_test.cpp  qrvm_eip3860_initcode_test.cpp  qrvm_fixture.cpp  qrvm_fixture.hpp  qrvm_memory_test.cpp  qrvm_other_test.cpp  qrvm_state_test.cpp  qrvm_storage_test.cpp  qrvm_test.cpp  qrvmone_test.cpp  state_bloom_filter_test.cpp  state_mpt_hash_test.cpp  state_mpt_test.cpp  state_new_account_address_test.cpp  state_rlp_test.cpp  state_transition.cpp  state_transition.hpp  state_transition_block_test.cpp  state_transition_create_test.cpp  statetest_loader_block_info_test.cpp  statetest_loader_test.cpp  statetest_loader_tx_test.cpp  statetest_logs_hash_test.cpp  tracing_test.cpp  zvm_calls_test.cpp  zvm_eip2929_test.cpp  zvm_eip3860_initcode_test.cpp  zvm_state_test.cpp
test/utils/: CMakeLists.txt  bytecode.hpp  utils.hpp
test/utils/stdx/: utility.hpp
test/zvm-benchmarks/: zvmbench.py
test/zvm-benchmarks/benchmarks/main/: blake2b_huff.json  sha1_divs.json  sha1_shifts.json  structarray_alloc.json  swap_math.json  weierstrudel.json
test/zvm-benchmarks/benchmarks/micro/: loop_with_many_jumpdests.json  memory_grow_mload.json  signextend.json
test/zvm-benchmarks/src/main/: blake2b_huff.yml  blake2b_shifts.yml  sha1_divs.yml  snailtracer.yml  swap_math.yml
